apps/logiplan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.0.134"],"port":443,"protocol":"HTTPS","serviceName":"apps:logiplan-webapi","ingressName":"apps:webapi-ingress","hostname":"testapi-preview.logiplan.se","path":"/","allNodes":false}]'
  name: webapi-ingress
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: testapi-preview.logiplan.se
      http:
        paths:
          - backend:
              service:
                name: logiplan-webapi
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - testapi-preview.logiplan.se
      secretName: testapi-preview-tls
